# cs4218-2520-ecom-project-cs4218-2520-team04

./: .gitignore  Readme.md  jest.backend.config.js  jest.frontend.config.js  jest.integration.backend.config.js  jest.integration.config.js  jest.integration.frontend.config.js  jest.security.config.js  jest.sonar.config.js  package-lock.json  package.json  playwright.config.js  sonar-project.example.properties  sonar-project.properties  sup.md
controllers/: authController.js  authController.test.js  categoryController.js  categoryController.test.js  productController.js  productController.test.js
coverage/: clover.xml  coverage-final.json  lcov.info
helpers/: authHelper.js  authHelper.test.js  inputValidation.js  loginProtection.js  loginProtection.test.js  passwordPolicy.js  passwordPolicy.test.js
middlewares/: authMiddleware.js  (+1 more)
multi-agentic-system/: .env.example  .gitignore  README.md  pyproject.toml
multi-agentic-system/testing_agents/: __init__.py  agents.py  cli.py  config.py  graph.py  interactive.py  llm.py  schemas.py  state.py  tracing.py
multi-agentic-system/testing_agents/tools/: __init__.py  artifact_store.py  ast_grep_tool.py  coverage_heuristics.py  jest_runner.py  js_heuristics.py  patch_writer.py  repo_search.py  source_reader.py  test_locator.py
multi-agentic-system/tests/: test_cli_write_guard.py  test_config_env.py  test_interactive.py  test_jest_runner.py  test_js_heuristics.py  test_repair_agent.py  test_repo_search.py  test_source_reader.py  test_supervisor_agent.py  test_test_locator.py  test_write_graph.py  test_write_session.py
(+127 files in other folders)
